# arcade_hub

./: README.md  docker-compose.yml
chess_pit/: README.md  docker-compose.yml  fight_against_engine.py
chess_pit/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
chess_pit/backend/alembic/: env.py  script.py.mako
chess_pit/backend/alembic/versions/: 13d9d3ef7b3f_add_engine_fields.py  20241207_0001_initial_schema.py  20241207_0002_add_game_pgn_and_initial_fen.py
chess_pit/backend/data/: chess.db
chess_pit/backend/data/data/: chess.db
chess_pit/backend/scripts/: bootstrap_users.py
chess_pit/backend/src/chess_backend/: __init__.py  config.py  db.py  lifespan.py  main.py  models.py  realtime.py  schemas.py  security.py
chess_pit/backend/src/chess_backend/api/: __init__.py  deps.py  routes_auth.py  routes_engines.py  routes_games.py  routes_health.py  routes_hub.py  routes_realtime.py  routes_users.py
chess_pit/backend/src/chess_backend/crud/: __init__.py  games.py  users.py
chess_pit/backend/src/chess_backend/services/: engine_runner.py
chess_pit/backend/src/chess_backend/utils/: __init__.py  fen.py
chess_pit/backend/tests/: conftest.py  test_engines.py  test_games.py  test_users.py
chess_pit/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.js
chess_pit/frontend/src/: App.svelte  app.css  vitest.d.ts
connect_4/: .env  docker-compose.yml  tools.py
connect_4/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
connect_4/backend/src/connect4/: __init__.py  app.py  datamodel.py  game.py  routes.py  sessions.py
connect_4/backend/tests/: test_game.py  test_routes.py
connect_4/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.js
connect_4/frontend/src/: App.svelte  app.css
landing_arcade/landing/: .gitignore  Dockerfile  README.md  index.html  jsconfig.json  package-lock.json  package.json  svelte.config.js
landing_arcade/landing/src/: App.svelte  app.css  main.js
scripts/: deploy.sh
sokoban/: Dockerfile  nginx.conf
sokoban/frontend/: package-lock.json  svelte.config.js  tsconfig.json
solve_parking/: .gitignore  README.md  docker-compose.yml
solve_parking/backend/: .dockerignore  Dockerfile  __init__.py  pyproject.toml
solve_parking/backend/data/: puzzles.sqlite3
solve_parking/backend/src/solve_parking_backend/: __init__.py  graph.py  main.py  models.py  repository.py  services.py  solver.py
solve_parking/backend/tests/: test_moves.py
solve_parking/data/: puzzles.sqlite3
solve_parking/frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  vite.config.js
solve_parking/puzzle_data/: puzzles.sqlite3
(+78 files in other folders)
