[project]
name = "connect4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guillem Portella", email = "guillemportella@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[project.scripts]
backend = "connect4:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connect4"]
